refactor: 基于bleve重构代码
